fixed contrast

--- a/climbtime/styles/styles.css
+++ b/climbtime/styles/styles.css
@@ -2,7 +2,7 @@
 
 :root {
     --primary-color: #FFCD69   ;
-    --secondary-color: #63b568 ;
+    --secondary-color: #2f8334 ;
     --accent1-color: #da6e4d;
     --accent2-color: black;
     --accent3-color: white;
